fix 修复无法运行的bug